@@ -1400,11 +1400,13 @@
 //-- WM_VOICEOFSIREN
 2420,1500,2500,0,0,15000:18000:21000:24000:27000,0
 //-- WM_DEADHILLHERE
-2421,3500:3000:2500:2000:1500,500,10000,0,0
+2421,3500:3000:2500:2000:1500,500,10000,0,0,0
 //-- WM_LULLABY_DEEPSLEEP
 2422,1500,1000,10000,0,10000,0
 //-- WM_SIRCLEOFNATURE
-2423,1000,1000,15000,0,40000:80000:120000:240000:360000,0	
+2423,1000,1000,15000,0,40000:80000:120000:240000:360000,0
+//-- WM_RANDOMIZESPELL
+2424,0,1000,2000,0,0,0
 //-- WM_GREAT_ECHO
 2426,1000,0,5000,0,0,0
 //-- WM_SONG_OF_MANA
